Adachirei_no_Daibouken/target/debug/build/crossbeam-utils-233ca5df0e0f2879/stderr
error[E0412]: cannot find type `AtomicU128` in module `core::sync::atomic`
    --> <anon>:1:38
     |
1    |   pub type Probe = core::sync::atomic::AtomicU128;
     |                                        ^^^^^^^^^^ help: a struct with a similar name exists: `AtomicU16`
     |
    ::: C:\Users\zer0x100\.rustup\toolchains\stable-x86_64-pc-windows-msvc\lib/rustlib/src/rust\library\core\src\sync\atomic.rs:2933:1
     |
2933 | / atomic_int! {
2934 | |     cfg(target_has_atomic = "16"),
2935 | |     cfg(target_has_atomic_equal_alignment = "16"),
2936 | |     stable(feature = "integer_atomics_stable", since = "1.34.0"),
...    |
2950 | |     u16 AtomicU16 ATOMIC_U16_INIT
2951 | | }
     | |_- similarly named struct `AtomicU16` defined here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0412`.
